# MuZero-for-Falling-Catch-and-2048

./: .gitignore  LICENSE  PROJECT_REPORT.md  README.md  demo.py  evaluate.py  plot.py  pyproject.toml  requirements.txt  script_utils.py  smoke_test.py  train.py
configs/: 2048.yaml  catch_no_heuristic.yaml  default.yaml
src/falling_muzero/: __init__.py  cli.py  config.py  game.py  game_2048.py  game_factory.py  mcts.py  networks.py  replay_buffer.py  trainer.py  visualization.py
src/falling_muzero/games/: __init__.py  falling_catch.py  game_2048.py  types.py
tests/: test_game.py  test_game_2048.py  test_networks_mcts.py  test_replay_buffer.py  test_smoke.py
