[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "falling-muzero"
version = "0.1.0"
description = "A compact MuZero-style implementation for deterministic grid games."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "PyYAML",
]

[project.scripts]
falling-muzero = "falling_muzero.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
